--- a/classes/SmartLabel.html
+++ b/classes/SmartLabel.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>The Mappedin Web SDK</title>
+    <title>SmartLabel - The Mappedin Web SDK</title>
     <meta name="description" content="An easy way to render beautiful 2D or 3D maps on your website, powered by Mappedin">
     <link rel="stylesheet" href="http://yui.yahooapis.com/3.9.1/build/cssgrids/cssgrids-min.css">
-    <link rel="stylesheet" href="./assets/vendor/prettify/prettify-min.css">
-    <link rel="stylesheet" href="./assets/css/main.css" id="site_styles">
-    <link rel="stylesheet" href="./assets/css/custom.css">
-    <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="./assets/vendor/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./assets/css/theme.css">
+    <link rel="stylesheet" href="../assets/vendor/prettify/prettify-min.css">
+    <link rel="stylesheet" href="../assets/css/main.css" id="site_styles">
+    <link rel="stylesheet" href="../assets/css/custom.css">
+    <link rel="stylesheet" href="../assets/vendor/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../assets/vendor/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../assets/css/theme.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700' rel='stylesheet' type='text/css'>
     
 
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-              <img src="./assets/img/logo.png" alt="default">
+              <img src="../assets/img/logo.png" alt="default">
             <span>The Mappedin Web SDK</span>
           </a>
         </div>
@@ -98,7 +98,7 @@
                         <div class="panel-body">
                                 <ol>
                                         <li>
-                                            <a href="./modules/Mappedin.html">Mappedin</a>
+                                            <a href="../modules/Mappedin.html">Mappedin</a>
                                         </li>
                                 </ol>
                         </div>
@@ -117,79 +117,79 @@
                         <div class="panel-body">
                             <ol>
                                     <li>
-                                        <a href="./classes/Analytics.html">Analytics</a>
+                                        <a href="../classes/Analytics.html">Analytics</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/CameraControls.html">CameraControls</a>
+                                        <a href="../classes/CameraControls.html">CameraControls</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/Easing.html">Easing</a>
+                                        <a href="../classes/Easing.html">Easing</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/Mappedin.html">Mappedin</a>
+                                        <a href="../classes/Mappedin.html">Mappedin</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinCategory.html">MappedinCategory</a>
+                                        <a href="../classes/MappedinCategory.html">MappedinCategory</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinDirections.html">MappedinDirections</a>
+                                        <a href="../classes/MappedinDirections.html">MappedinDirections</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinDirective.html">MappedinDirective</a>
+                                        <a href="../classes/MappedinDirective.html">MappedinDirective</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinEvent.html">MappedinEvent</a>
+                                        <a href="../classes/MappedinEvent.html">MappedinEvent</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinLocation.html">MappedinLocation</a>
+                                        <a href="../classes/MappedinLocation.html">MappedinLocation</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinLocationState.html">MappedinLocationState</a>
+                                        <a href="../classes/MappedinLocationState.html">MappedinLocationState</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinMap.html">MappedinMap</a>
+                                        <a href="../classes/MappedinMap.html">MappedinMap</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinMapGroup.html">MappedinMapGroup</a>
+                                        <a href="../classes/MappedinMapGroup.html">MappedinMapGroup</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinNode.html">MappedinNode</a>
+                                        <a href="../classes/MappedinNode.html">MappedinNode</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinPolygon.html">MappedinPolygon</a>
+                                        <a href="../classes/MappedinPolygon.html">MappedinPolygon</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinVenue.html">MappedinVenue</a>
+                                        <a href="../classes/MappedinVenue.html">MappedinVenue</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MappedinVortex.html">MappedinVortex</a>
+                                        <a href="../classes/MappedinVortex.html">MappedinVortex</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MapView.html">MapView</a>
+                                        <a href="../classes/MapView.html">MapView</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MapView2D.html">MapView2D</a>
+                                        <a href="../classes/MapView2D.html">MapView2D</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/MapView3D.html">MapView3D</a>
+                                        <a href="../classes/MapView3D.html">MapView3D</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/Marker.html">Marker</a>
+                                        <a href="../classes/Marker.html">Marker</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/Navigator.html">Navigator</a>
+                                        <a href="../classes/Navigator.html">Navigator</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/Search.html">Search</a>
+                                        <a href="../classes/Search.html">Search</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/SmartLabel.html">SmartLabel</a>
+                                        <a href="../classes/SmartLabel.html">SmartLabel</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/TextLabel.html">TextLabel</a>
+                                        <a href="../classes/TextLabel.html">TextLabel</a>
                                     </li>
                                     <li>
-                                        <a href="./classes/Tween.html">Tween</a>
+                                        <a href="../classes/Tween.html">Tween</a>
                                     </li>
                             </ol>
                         </div>
@@ -200,27 +200,65 @@
                 <div class="apidocs">
                     <div id="docs-main">
                         <div class="content">
-    <script type="text/javascript">window.location.replace("modules/Mappedin.html");</script>
 
-<div class="apidocs">
-    <div id="docs-main" class="content">
-        <div class="page-header">
-            <h1> <i class="fa fa-book" aria-hidden="true"></i> Welcome</h1>
-        </div>
 
-        <p>
-            Browse to a module or class using the sidebar to view its API documentation.
-        </p>
+<div class="page-header">
+    <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> SmartLabel Class
+    </h1>
+</div>
 
-        <h3>Keyboard Shortcuts</h3>
 
-        <ul>
-            <li><p>Press <kbd>s</kbd> to focus the API search box.</p></li>
+<div class="content-meta">
 
-            <li><p>Use <kbd>Up</kbd> and <kbd>Down</kbd> to navigate search results.</p></li>
 
-            <li><p>Use <kbd>Enter</kbd> to select a search result.</p></li>
+            Module: <a href="../modules/Mappedin.html">Mappedin</a>
+
+
+</div>
+
+
+
+  <div class="class-description">
+  <p>An internal representaion of a 2D text label. Make your own with <a href="../classes/MapView.html#method_labelPolygon" class="crosslink">labelPolygon</a>.</p>
+
+  </div>
+
+<div>
+    <div class="page-section">
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+          <li role="presentation" class="active"><a href="#tab_index" aria-controls="tab_index" role="tab" data-toggle="tab">Index</a></li>
+
+
+
         </ul>
+
+        <!-- Tab panes -->
+        <div class="tab-content">
+
+              <form id="options-form" class="form-inline">
+                  Show:
+                  <label for="api-show-inherited" class="checkbox">
+                      <input type="checkbox" id="api-show-inherited" checked>
+                      Inherited
+                  </label>
+                  <label for="api-show-deprecated" class="checkbox">
+                      <input type="checkbox" id="api-show-deprecated">
+                      Deprecated
+                  </label>
+          
+              </form>
+
+          <div id="tab_index" role="tabpanel" class="tab-pane active" >
+
+
+
+          </div>
+
+
+
+
+      </div>
     </div>
 </div>
                         </div>
@@ -229,12 +267,12 @@
             </div>
         </div>
     </div>
-    <script src="./assets/vendor/prettify/prettify-min.js"></script>
+    <script src="../assets/vendor/prettify/prettify-min.js"></script>
     <script>prettyPrint();</script>
-    <script src="./assets/vendor/jquery/jquery.min.js"></script>
-    <script src="./assets/vendor/jquery-ui/jquery-ui.min.js"></script>
-    <script src="./assets/vendor/bootstrap/js/bootstrap.js"></script>
-    <script src="./assets/vendor/github-slugger/slugger.js"></script>
-    <script src="./assets/js/yuidoc-bootstrap.js"></script>
+    <script src="../assets/vendor/jquery/jquery.min.js"></script>
+    <script src="../assets/vendor/jquery-ui/jquery-ui.min.js"></script>
+    <script src="../assets/vendor/bootstrap/js/bootstrap.js"></script>
+    <script src="../assets/vendor/github-slugger/slugger.js"></script>
+    <script src="../assets/js/yuidoc-bootstrap.js"></script>
 </body>
 </html>
