--- a/modules/Mappedin.html
+++ b/modules/Mappedin.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.46.1
+                                  Version: 1.50.0
                                 </a>
                             </h4>
                         </div>
@@ -177,7 +177,13 @@
                                         <a href="../classes/Marker.html">Marker</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/Navigator.html">Navigator</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/Search.html">Search</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/SmartLabel.html">SmartLabel</a>
                                     </li>
                                     <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
@@ -321,8 +327,18 @@
                             </a>
                         </li>
                         <li class="module-class">
+                            <a href="../classes/Navigator.html">
+                                Navigator
+                            </a>
+                        </li>
+                        <li class="module-class">
                             <a href="../classes/Search.html">
                                 Search
+                            </a>
+                        </li>
+                        <li class="module-class">
+                            <a href="../classes/SmartLabel.html">
+                                SmartLabel
                             </a>
                         </li>
                         <li class="module-class">
