--- a/classes/MapView3D.html
+++ b/classes/MapView3D.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.46.1
+                                  Version: 1.50.0
                                 </a>
                             </h4>
                         </div>
@@ -177,7 +177,13 @@
                                         <a href="../classes/Marker.html">Marker</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/Navigator.html">Navigator</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/Search.html">Search</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/SmartLabel.html">SmartLabel</a>
                                     </li>
                                     <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
@@ -380,6 +386,7 @@
             <li role="presentation"><a href="#tab_properties" aria-controls="tab_properties" role="tab" data-toggle="tab">Properties</a></li>
 
 
+            <li role="presentation"><a href="#tab_events" aria-controls="tab_events" role="tab" data-toggle="tab">Events</a></li>
         </ul>
 
         <!-- Tab panes -->
@@ -615,6 +622,24 @@
                   </div>
 
 
+                  <div class="index-section events">
+                      <h3>Events</h3>
+
+                      <ul class="index-list events extends">
+                              <li class="index-item event">
+                                  <a href="#event_onMapClicked">onMapClicked</a>
+
+                              </li>
+                              <li class="index-item event">
+                                  <a href="#event_onNothingClicked">onNothingClicked</a>
+
+                              </li>
+                              <li class="index-item event">
+                                  <a href="#event_onPolygonClicked">onPolygonClicked</a>
+
+                              </li>
+                      </ul>
+                  </div>
           </div>
 
               <div id="tab_methods" role="tabpanel" class="tab-pane">
@@ -1222,7 +1247,7 @@
   
   
   </div>
-  <div id="method_drawPath" class="method item inherited">
+  <div id="method_drawPath" class="method item">
   	<span class="method-signature">
   	<span class="name anchorable-toc">
   		<a class="fa fa-link toc-anchor" href="#method_drawPath"></a>
@@ -1240,7 +1265,7 @@
   			</ul><span class="paren">)</span>
   		</div>
   		<span class="returns-inline">
-  			<span class="type">PathSegment</span>
+  			<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array" class="crosslink external" target="_blank">Array</a></span>
   		</span>
   	</span>
   
@@ -1251,17 +1276,19 @@
   
   
   	<div class="meta">
-  				<p>Inherited from
-  				<a href="../classes/MapView.html#method_drawPath">MapView</a>:
+  			<p>Inherited from
+  			<a href="../classes/MapView.html#method_drawPath">
+  				MapView
+  			</a>
   		</p>
   
   
   
   	</div>
   
-  	<div class="description"><p>Draws an entire path. It takes a list of Nodes and will break them into separate pathSegments on every map change, putting the resultant segment on the right Map.</p>
-  <p>If you have a special use case (like off graph nodes, or Venues with same Vortexes) use the <a href="../classes/MapView.html#method_drawPathSegment" class="crosslink">drawPathSegment</a> function.</p>
-  <p>Returns an array of pathSegments if you want to customize the animation triggers. The pathSegements are added to the scene, chained together, and start animating automatically.</p>
+  	<div class="description"><p>Draws path in 3D space</p>
+  <p>Draws an entire path. It takes a list of nodes and will break them into separate path segments on every man change, putting the resultant segment on the right map.</p>
+  <p>If you have a special use case (like off graph nodes, or venues with same map vortexes) use the drawPathSegment function.</p>
   </div>
   
   		<div class="params">
@@ -1283,9 +1310,127 @@
   						<span class="flag optional" title="This parameter is optional.">optional</span>
   
   
-  					<div class="param-description"><p>A list of style options for the path. Not everything is supported in 2D. See drawPath for available options. Note that drawDuration is per segment.</p>
+  					<div class="param-description"><p>Options for path drawing</p>
   </div>
   
+  						<ul class="params-list">
+  							<li class="param">
+  									<code class="param-name optional">[color=0xff834c]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Path Colour</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[pulseColor=0xffffff]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Colour of path pulse</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[pulseIterations=Infinity]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Number of iterations to pulse to indicate direction</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[radius=10]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Radius of path</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[drawDuration=3000]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Duration of path drawing</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[curve=TWEEN.Easing.Circular.InOut]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Path animation curve</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[drawConnectionSegments=true]</code>
+  									<span class="type"></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Draw map-to-map connection segments</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[connectionPathOptions]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Options for floor-to-floor connection paths</p>
+  </div>
+  
+  									<ul class="params-list">
+  										<li class="param">
+  												<code class="param-name optional">[color=0xff834c]</code>
+  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
+  												<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  											<div class="param-description">Path Colour</div>
+  										</li>
+  										<li class="param">
+  												<code class="param-name optional">[pulseColor=0xffffff]</code>
+  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
+  												<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  											<div class="param-description">Colour of path pulse</div>
+  										</li>
+  										<li class="param">
+  												<code class="param-name optional">[pulseIterations=Infinity]</code>
+  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  												<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  											<div class="param-description">Number of iterations to pulse to indicate direction</div>
+  										</li>
+  										<li class="param">
+  												<code class="param-name optional">[radius=10]</code>
+  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  												<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  											<div class="param-description">Radius of path</div>
+  										</li>
+  										<li class="param">
+  												<code class="param-name optional">[drawDuration=3000]</code>
+  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  												<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  											<div class="param-description">Duration of path drawing</div>
+  										</li>
+  										<li class="param">
+  												<code class="param-name optional">[curve=TWEEN.Easing.Circular.InOut]</code>
+  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  												<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  											<div class="param-description">Connection Path animation curve</div>
+  										</li>
+  									</ul>
+  							</li>
+  						</ul>
   				</li>
   			</ul>
   		</div>
@@ -1294,8 +1439,8 @@
   			<h4>Returns:</h4>
   
   			<div class="returns-description">
-  						<span class="type">PathSegment</span>:
-  					<p>An array of pathSegments.</p>
+  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array" class="crosslink external" target="_blank">Array</a></span>:
+  					<p>Array of Tween segments representing paths drawn on screen</p>
   
   			</div>
   		</div>
@@ -1584,7 +1729,7 @@
   			</ul><span class="paren">)</span>
   		</div>
   		<span class="returns-inline">
-  			<span class="type"></span>
+  			<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise" class="crosslink external" target="_blank">Promise</a></span>
   		</span>
   	</span>
   
@@ -1603,7 +1748,8 @@
   
   	</div>
   
-  	<div class="description"><p>Expand maps to display within view</p>
+  	<div class="description"><p>Expand maps to display within view, typically used for multi-floor navigation. When passed a connection, maps included will not be displayed, instead, their 2d projection
+  will be available in the resulting promise, which can be used to display a 2D component in the client-side app.</p>
   </div>
   
   		<div class="params">
@@ -1612,10 +1758,10 @@
   			<ul class="params-list">
   				<li class="param">
   						<code class="param-name">mapIds</code>
-  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array" class="crosslink external" target="_blank">Array</a></span>
   
   
-  					<div class="param-description"><p>[Array] Array of mapIds to display while expanded</p>
+  					<div class="param-description"><p>Array of mapIds or mapObjects to display while expanded. For connections, pass { connection: true, maps: [], connectionNodes: [], }</p>
   </div>
   
   				</li>
@@ -1673,9 +1819,59 @@
   			<h4>Returns:</h4>
   
   			<div class="returns-description">
+  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise" class="crosslink external" target="_blank">Promise</a></span>:
+  					<p>Promise that resolves to 2d screen projections of each layer/map (see example)</p>
+  
   			</div>
   		</div>
   
+  		<div class="example">
+  			<h4>Example:</h4>
+  
+  			<div class="example-content">
+  				<pre class="code prettyprint"><code>// expand maps with 3 connection maps in between
+  expandMaps(
+      '55e89771d982bc06ca000000',
+          {
+              connection: true,
+              // connection nodes are an exit node from the '55e89771' man and entry node for the '55e9c73f' map
+              connectionNodes: [{
+                  map: "55e89771",
+                  x: 6232,
+                  y: 4575
+              }, {
+                  map: "55e9c73",
+                  x: 5945.000000000001,
+                  y: 4059.000000000001
+              }],
+              maps: [
+                  '55e9acbf',
+                  '55e8a9ed',
+                  '55e85e23'
+              ]
+          },
+          '55e9c73f'
+       );
+  
+       // resulting promise (sorted by elevation (top to bottom))
+  
+       [
+          {
+              min: { x: -100, y: -50 },
+              max: { x: -100, y: -50 }
+          },
+          {
+              min: { x: -100, y: -50 },
+              max: { x: -100, y: -50 }
+          },
+          {
+              min: { x: -100, y: -50 },
+              max: { x: -100, y: -50 }
+          }
+       ]</code></pre>
+  
+  			</div>
+  		</div>
   </div>
   <div id="method_focusOn" class="method item inherited">
   	<span class="method-signature">
@@ -3730,6 +3926,122 @@
               </div>
 
 
+              <div id="tab_events" role="tabpanel" class="tab-pane">
+                  <div class="item-list">
+  <div id="event_onMapClicked" class="events item">
+      <h3 class="name anchorable-toc">
+          <a class="fa fa-link toc-anchor" href="#event_onMapClicked"></a>
+          onMapClicked
+      </h3>
+      <span class="type"></span>
+  
+  
+  
+  
+  
+      <div class="meta">
+                  <p>
+          </p>
+  
+  
+      </div>
+  
+      <div class="description">
+          <p>Fired when clicking on a map when in multi-floor mode. Return true in passed function to also get event for onPolygonClicked</p>
+  
+      </div>
+  
+          <div class="params">
+              <h4>Event Payload:</h4>
+  
+              <ul class="params-list">
+                  <li class="param">
+                          <code class="param-name">mapId</code>
+                          <span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
+  
+  
+                      <div class="param-description">
+                          <p>id of map clicked</p>
+  
+                      </div>
+  
+                  </li>
+              </ul>
+          </div>
+  
+  
+  </div>
+  <div id="event_onNothingClicked" class="events item">
+      <h3 class="name anchorable-toc">
+          <a class="fa fa-link toc-anchor" href="#event_onNothingClicked"></a>
+          onNothingClicked
+      </h3>
+      <span class="type"></span>
+  
+  
+  
+  
+  
+      <div class="meta">
+                  <p>
+          </p>
+  
+  
+      </div>
+  
+      <div class="description">
+          <p>Fired when clicking outside of any interactive polygons</p>
+  
+      </div>
+  
+  
+  
+  </div>
+  <div id="event_onPolygonClicked" class="events item">
+      <h3 class="name anchorable-toc">
+          <a class="fa fa-link toc-anchor" href="#event_onPolygonClicked"></a>
+          onPolygonClicked
+      </h3>
+      <span class="type"></span>
+  
+  
+  
+  
+  
+      <div class="meta">
+                  <p>
+          </p>
+  
+  
+      </div>
+  
+      <div class="description">
+          <p>Fired when clicking on an interactive polygon. Return true in passed function to prevent polygon propagation</p>
+  
+      </div>
+  
+          <div class="params">
+              <h4>Event Payload:</h4>
+  
+              <ul class="params-list">
+                  <li class="param">
+                          <code class="param-name">polygonId</code>
+                          <span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
+  
+  
+                      <div class="param-description">
+                          <p>id of polygon</p>
+  
+                      </div>
+  
+                  </li>
+              </ul>
+          </div>
+  
+  
+  </div>
+                  </div>
+              </div>
       </div>
     </div>
 </div>
