--- a/classes/MappedinNode.html
+++ b/classes/MappedinNode.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.46.1
+                                  Version: 1.50.0
                                 </a>
                             </h4>
                         </div>
@@ -177,7 +177,13 @@
                                         <a href="../classes/Marker.html">Marker</a>
                                     </li>
                                     <li>
+                                        <a href="../classes/Navigator.html">Navigator</a>
+                                    </li>
+                                    <li>
                                         <a href="../classes/Search.html">Search</a>
+                                    </li>
+                                    <li>
+                                        <a href="../classes/SmartLabel.html">SmartLabel</a>
                                     </li>
                                     <li>
                                         <a href="../classes/TextLabel.html">TextLabel</a>
@@ -257,6 +263,10 @@
                               </li>
                               <li class="index-item method">
                                   <a href="#method_directionsToCallback">directionsToCallback</a>
+
+                              </li>
+                              <li class="index-item method">
+                                  <a href="#method_distanceTo">distanceTo</a>
 
                               </li>
                               <li class="index-item method">
@@ -342,7 +352,7 @@
   
   	</div>
   
-  	<div class="description"><p>Gets directions from this Node to the target Node or Location.</p>
+  	<div class="description"><p>Gets directions from this Node to the target Polygon, Location, Node or array of Nodes.</p>
   </div>
   
   		<div class="params">
@@ -456,6 +466,92 @@
   
   
   					<div class="param-description"><p>Directions response.</p>
+  </div>
+  
+  				</li>
+  			</ul>
+  		</div>
+  
+  
+  </div>
+  <div id="method_distanceTo" class="method item">
+  	<span class="method-signature">
+  	<span class="name anchorable-toc">
+  		<a class="fa fa-link toc-anchor" href="#method_distanceTo"></a>
+  		distanceTo
+  	</span>
+  
+  		<div class="args">
+  			<span class="paren">(</span><ul class="args-list inline commas">
+  				<li class="arg">
+  						<code>destination</code>
+  				</li>
+  				<li class="arg">
+  						<code>options</code>
+  				</li>
+  				<li class="arg">
+  						<code>cb</code>
+  				</li>
+  			</ul><span class="paren">)</span>
+  		</div>
+  	</span>
+  
+  
+  
+  
+  
+  
+  
+  	<div class="meta">
+  				<p>
+  		</p>
+  
+  
+  
+  	</div>
+  
+  	<div class="description"><p>Gets the cost (combined distance and weights) and total distance(in meters) from this Node to the target Polygon, Location, Node or array of Nodes.</p>
+  </div>
+  
+  		<div class="params">
+  			<h4>Parameters:</h4>
+  
+  			<ul class="params-list">
+  				<li class="param">
+  						<code class="param-name">destination</code>
+  						<span class="type"><a href="../classes/MappedinLocation.html" class="crosslink">MappedinLocation</a>  |  <a href="../classes/MappedinNode.html" class="crosslink">MappedinNode</a>  |  <a href="../classes/MappedinNode.html" class="crosslink">[MappedinNode]</a>  |  <a href="../classes/MappedinPolygon.html" class="crosslink">MappedinPolygon</a></span>
+  
+  
+  					<div class="param-description"><p>Destination.</p>
+  </div>
+  
+  				</li>
+  				<li class="param">
+  						<code class="param-name">options</code>
+  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  
+  
+  					<div class="param-description"><p>Options.</p>
+  </div>
+  
+  						<ul class="params-list">
+  							<li class="param">
+  									<code class="param-name optional">[accessible=false]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>True if directions should be wheelchair accessible.</p>
+  </div>
+  
+  							</li>
+  						</ul>
+  				</li>
+  				<li class="param">
+  						<code class="param-name">cb</code>
+  						<span class="type">Error, Object</span>
+  
+  
+  					<div class="param-description"><p>Callback object with cost and distance to target.</p>
   </div>
   
   				</li>
