Adds missing mapList to fix issue with labels

--- a/examples/Multifloor/index.html
+++ b/examples/Multifloor/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div id="mapView"></div>
+  <select id="mapList"></select>
 	<div id="padding_outline"></div>
   <div id="settings">
     <h2>Settings</h2>
