--- a/classes/MappedinNode.html
+++ b/classes/MappedinNode.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.50.0
+                                  Version: 1.55.1
                                 </a>
                             </h4>
                         </div>
@@ -274,7 +274,7 @@
 
                               </li>
                               <li class="index-item method">
-                                  <a href="#method_getAngle">getAngle</a>
+                                  <a href="#method_getDistance">getDistance</a>
 
                               </li>
                       </ul>
@@ -621,11 +621,11 @@
   		</div>
   
   </div>
-  <div id="method_getAngle" class="method item">
+  <div id="method_getDistance" class="method item">
   	<span class="method-signature">
   	<span class="name anchorable-toc">
-  		<a class="fa fa-link toc-anchor" href="#method_getAngle"></a>
-  		getAngle
+  		<a class="fa fa-link toc-anchor" href="#method_getDistance"></a>
+  		getDistance
   	</span>
   
   		<div class="args">
