--- a/classes/Navigator.html
+++ b/classes/Navigator.html
@@ -81,7 +81,7 @@
                     <li class="panel panel-default">
                         <div class="panel-heading" role="tab" id="sidebar-version-heading">
                             <h4 class="panel-title">
-                                  Version: 1.50.0
+                                  Version: 1.55.1
                                 </a>
                             </h4>
                         </div>
@@ -264,6 +264,7 @@
 
             <li role="presentation"><a href="#tab_attrs" aria-controls="tab_attrs" role="tab" data-toggle="tab">Attributes</a></li>
 
+            <li role="presentation"><a href="#tab_events" aria-controls="tab_events" role="tab" data-toggle="tab">Events</a></li>
         </ul>
 
         <!-- Tab panes -->
@@ -308,6 +309,10 @@
 
                               </li>
                               <li class="index-item method">
+                                  <a href="#method_setOptions">setOptions</a>
+
+                              </li>
+                              <li class="index-item method">
                                   <a href="#method_setScale">setScale</a>
 
                               </li>
@@ -337,6 +342,16 @@
                       </ul>
                   </div>
 
+                  <div class="index-section events">
+                      <h3>Events</h3>
+
+                      <ul class="index-list events">
+                              <li class="index-item event">
+                                  <a href="#event_onConnectionClicked">onConnectionClicked</a>
+
+                              </li>
+                      </ul>
+                  </div>
           </div>
 
               <div id="tab_methods" role="tabpanel" class="tab-pane">
@@ -557,6 +572,174 @@
   
   
   </div>
+  <div id="method_setOptions" class="method item">
+  	<span class="method-signature">
+  	<span class="name anchorable-toc">
+  		<a class="fa fa-link toc-anchor" href="#method_setOptions"></a>
+  		setOptions
+  	</span>
+  
+  		<div class="args">
+  			<span class="paren">(</span><ul class="args-list inline commas">
+  				<li class="arg">
+  						<code class="optional">options</code>
+  				</li>
+  			</ul><span class="paren">)</span>
+  		</div>
+  	</span>
+  
+  
+  
+  
+  
+  
+  
+  	<div class="meta">
+  				<p>
+  		</p>
+  
+  
+  
+  	</div>
+  
+  	<div class="description"><p>Sets up navigator settings. Typically uses options as documented by <code>Navigator.showOverview()</code>
+  *</p>
+  </div>
+  
+  		<div class="params">
+  			<h4>Parameters:</h4>
+  
+  			<ul class="params-list">
+  				<li class="param">
+  						<code class="param-name optional">[options]</code>
+  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  						<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  
+  					<div class="param-description"><p>Options Object</p>
+  </div>
+  
+  						<ul class="params-list">
+  							<li class="param">
+  									<code class="param-name optional">[hideLabels=false]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Hide labels after showing journey</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[drawConnectionMarkers=true]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Draw multi-floor connection markers</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[drawDepartureMarker=true]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Draw marker indicating departure</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[drawDestinationMarker=true]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Draw marker indicating destination</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[debug=false]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Show debug information</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[connectionsThreshold=100]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Distance in meters between entry and exit connections on a floor to use as a threshold to make it into a virtual layer</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[combineSimilarConnections=true]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Combine floors with similar entry and exit connections into virtual layers</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[pathOptions]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Options for path drawing. See <a href="../classes/MapView3D.html#method_drawPath" class="crosslink">drawPath</a> options for customizing path</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[focusOptions]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Options for focusing on the path when in single floor mode. See See MapView3D/focusOn</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name optional">[expandOptions]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Options for expanding the maps.</p>
+  </div>
+  
+  									<ul class="params-list">
+  										<li class="param">
+  												<code class="param-name optional">[focus=false]</code>
+  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
+  												<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  											<div class="param-description">Focus the camera onto expanded maps</div>
+  										</li>
+  										<li class="param">
+  												<code class="param-name optional">[rotation=0]</code>
+  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  												<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  											<div class="param-description">Rotation of scene relative to zero (degrees)</div>
+  										</li>
+  										<li class="param">
+  												<code class="param-name optional">[duration=300]</code>
+  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  												<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  											<div class="param-description">Duration of focus animation in ms</div>
+  										</li>
+  									</ul>
+  							</li>
+  						</ul>
+  				</li>
+  			</ul>
+  		</div>
+  
+  
+  </div>
   <div id="method_setScale" class="method item">
   	<span class="method-signature">
   	<span class="name anchorable-toc">
@@ -623,9 +806,6 @@
   				<li class="arg">
   						<code>[directions.animationDuration}</code>
   				</li>
-  				<li class="arg">
-  						<code class="optional">options</code>
-  				</li>
   			</ul><span class="paren">)</span>
   		</div>
   		<span class="returns-inline">
@@ -683,6 +863,15 @@
   </div>
   
   							</li>
+  							<li class="param">
+  									<code class="param-name optional">[options]</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  									<span class="flag optional" title="This parameter is optional.">optional</span>
+  
+  								<div class="param-description"><p>Options object as documented in <a href="../classes/Navigator.html#method_setOptions" class="crosslink">setOptions</a></p>
+  </div>
+  
+  							</li>
   						</ul>
   				</li>
   				<li class="param">
@@ -693,95 +882,6 @@
   					<div class="param-description"><p>Time in ms for the animation to take</p>
   </div>
   
-  				</li>
-  				<li class="param">
-  						<code class="param-name optional">[options]</code>
-  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
-  						<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  
-  					<div class="param-description"><p>Options Object</p>
-  </div>
-  
-  						<ul class="params-list">
-  							<li class="param">
-  									<code class="param-name optional">[hideLabels=false]</code>
-  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
-  									<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  								<div class="param-description"><p>Hide labels after showing journey</p>
-  </div>
-  
-  							</li>
-  							<li class="param">
-  									<code class="param-name optional">[debug=false]</code>
-  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
-  									<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  								<div class="param-description"><p>Show debug information</p>
-  </div>
-  
-  							</li>
-  							<li class="param">
-  									<code class="param-name optional">[connectionsThreshold=100]</code>
-  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
-  									<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  								<div class="param-description"><p>Distance in meters between entry and exit connections on a floor to use as a threshold to make it into a virtual layer</p>
-  </div>
-  
-  							</li>
-  							<li class="param">
-  									<code class="param-name optional">[combineSimilarConnections=true]</code>
-  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
-  									<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  								<div class="param-description"><p>Combine floors with similar entry and exit connections into virtual layers</p>
-  </div>
-  
-  							</li>
-  							<li class="param">
-  									<code class="param-name optional">[pathOptions]</code>
-  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
-  									<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  								<div class="param-description"><p>Options for path drawing. See <a href="../classes/MapView3D.html#method_drawPath" class="crosslink">drawPath</a> options for customizing path</p>
-  </div>
-  
-  							</li>
-  							<li class="param">
-  									<code class="param-name optional">[expandOptions]</code>
-  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
-  									<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  								<div class="param-description"><p>Options for expanding the maps.</p>
-  </div>
-  
-  									<ul class="params-list">
-  										<li class="param">
-  												<code class="param-name optional">[focus=false]</code>
-  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean" class="crosslink external" target="_blank">Boolean</a></span>
-  												<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  											<div class="param-description">Focus the camera onto expanded maps</div>
-  										</li>
-  										<li class="param">
-  												<code class="param-name optional">[rotation=0]</code>
-  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
-  												<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  											<div class="param-description">Rotation of scene relative to zero (degrees)</div>
-  										</li>
-  										<li class="param">
-  												<code class="param-name optional">[duration=300]</code>
-  												<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
-  												<span class="flag optional" title="This parameter is optional.">optional</span>
-  
-  											<div class="param-description">Duration of focus animation in ms</div>
-  										</li>
-  									</ul>
-  							</li>
-  						</ul>
   				</li>
   			</ul>
   		</div>
@@ -962,6 +1062,64 @@
                   </div>
               </div>
 
+              <div id="tab_events" role="tabpanel" class="tab-pane">
+                  <div class="item-list">
+  <div id="event_onConnectionClicked" class="events item">
+      <h3 class="name anchorable-toc">
+          <a class="fa fa-link toc-anchor" href="#event_onConnectionClicked"></a>
+          onConnectionClicked
+      </h3>
+      <span class="type"></span>
+  
+  
+  
+  
+  
+      <div class="meta">
+                  <p>
+          </p>
+  
+  
+      </div>
+  
+      <div class="description">
+          <p>Fired when clicking on a map connection marker when in multi-floor mode. Return true in passed in function to prevent default behavior</p>
+  
+      </div>
+  
+          <div class="params">
+              <h4>Event Payload:</h4>
+  
+              <ul class="params-list">
+                  <li class="param">
+                          <code class="param-name">params</code>
+                          <span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  
+  
+                      <div class="param-description">
+                           
+                      </div>
+  
+                          <ul class="params-list">
+                              <li class="param">
+                                      <code class="param-name">mapId</code>
+                                      <span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
+  
+                                  <div class="param-description">
+                                      <p>mapId of map connecting to</p>
+  
+                                  </div>
+  
+                              </li>
+                          </ul>
+                  </li>
+              </ul>
+          </div>
+  
+  
+  </div>
+                  </div>
+              </div>
       </div>
     </div>
 </div>
