Updates docs for using custom fonts with text labels

--- a/classes/MapView.html
+++ b/classes/MapView.html
@@ -2695,7 +2695,7 @@
   									<span class="type"></span>
   									<span class="flag optional" title="This parameter is optional.">optional</span>
   
-  								<div class="param-description"><p>A CSS style string font. ie "sans-serif". Note: Support for a THREE.Font object is still supported, but is deprecated.</p>
+  								<div class="param-description"><p>A CSS style string font. ie "sans-serif". You can specify your own font via @font-face rule with a font family, and then include that here. Note: Support for a THREE.Font object is still supported, but is deprecated.</p>
   </div>
   
   							</li>
