Added Public Keys to Repo
Also polished up READMEs and renamed samples to provide better clarity
on each.

--- a/examples/HelloWorld/index.html
+++ b/examples/HelloWorld/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bare Bones 3D Map</title>
+  <title>Hello World 3D Map</title>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
